Temporarily solve header layout bug by reducing margin. Needs a better solution

--- a/src/components/Headers/FormHeader/FormHeader.scss
+++ b/src/components/Headers/FormHeader/FormHeader.scss
@@ -63,7 +63,7 @@ $mobile-menu-bg-color:    #f4f5f8;
 }
 .buttonWrapper {
   float: right;
-  margin-left: 15px;
+  margin-left: 10px;
 }
 .saveButton {
   padding: 8px 25px;
